# turnin

./: .gitignore  .pypirc  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
docs/: DEVELOPMENT.md  ISSUES.md  README.md
src/turnin/: __main__.py  app.py  config.py  turnin.py
tests/: conftest.py  test_config.py  test_git.py  test_github.py  test_githubClient.py  test_github_client.py  test_provider_factory.py
turnin/: __main__.py  cli.py  client.py  config.py  constants.py  git.py  git_provider_client.py  github.py  github_client.py  provider.py  provider_factory.py  requests.py  ssh.py
