[metadata]
name = turnin
version = 0.0.1
author = Erik Hakansson
description = CLI tool for automating coding assigment submission on GitHub.
long_description = file: README.md
url = https://github.com/Expan75/turnin
project_urls =
    Bug Tracker = https://github.com/Expan75/turnin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src
